-Wimplicit-fallthrough warning in ComputedStyleExtractor::propertyValue https://bugs.webkit.org/show_bug.cgi?id=174469 <rdar://problem/33311638>

Reviewed by Simon Fraser.

Add a RELEASE_ASSERT_NOT_REACHED to silence this warning.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::ComputedStyleExtractor::propertyValue):


Canonical link: https://commits.webkit.org/192003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220354 268f45cc-cd09-0410-ab3c-d52691b4dbfc